@@ -2,6 +2,7 @@ package me.maxed.cspy.commands.tabcompleters;
 
 import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
@@ -14,9 +15,8 @@ public class TabCSpy implements TabCompleter {
 	public List<String> onTabComplete(CommandSender sender, Command cmd, String label, String[] args) {
 		
 		if(args.length == 1) {
-			return Bukkit.getOnlinePlayers().stream().map(x -> x.getName()).toList();
-		} 
-		
+			return Bukkit.getOnlinePlayers().stream().map(x -> x.getName()).collect(Collectors.toList());
+		}
 		return new LinkedList<>();
 	}
 
